--- a/src/components/MainContent/AboutContainer/Info/Info.module.css
+++ b/src/components/MainContent/AboutContainer/Info/Info.module.css
@@ -1,12 +1,13 @@
 .InfoContainer {
     text-align: left;
-    margin-top: 100px;
+    margin-top: 50px;
     color: var(--orange);
     font-weight: bold;
 }
 
 .InfoItem {
     margin: 10px 0 10px 0;
+    color: var(--white);
 }
 
 
