--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --grey: #575151;
   --darkGrey: #2B2B2B;
   --black: #131313;
-  --red: #A31F34;
+  --red: rgb(232, 163, 102);
   --orangeTrans: rgba(242, 170, 76, 0.1);
 }
 
